# xtask

./: Cargo.toml  dist-workspace.toml  licence.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs  updater.rs
src/generators/: domain.rs  extractor.rs  mod.rs
src/generators/init/: mod.rs
src/generators/init/templates/: bootstrap.rs  cargo.rs  config.rs  domains.rs  env.rs  extractor.rs  http.rs  infrastructure.rs  lib_rs.rs  main_rs.rs  mod.rs  routes.rs
src/util/: mod.rs  naming.rs  repo_root.rs
