[package]
name = "cargo-xtask"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/entcorporg/xtask.git"
license = "LicenseRef-Proprietary"

[[bin]]
name = "cargo-xtask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.4", features = ["derive", "env"] }
anyhow = "1"
self_update = { version = "0.44", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "reqwest",
    "rustls",
] }


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
